# imageboard

./: .gitignore  LICENSE  run-node  run-server
ibclientnode/: package-lock.json  package.json
ibclientnode/src/: app.js
ibserver/: .env  Cargo.toml
ibserver/migrations/2020-02-16-051753_posts/: up.sql
ibserver/migrations/2020-02-16-051800_tags/: up.sql
ibserver/migrations/2020-02-16-051803_count/: down.sql  up.sql
ibserver/migrations/2020-02-16-051809_post_tags/: down.sql  up.sql
ibserver/src/: main.rs
ibserver/src/database/: mod.rs  schema.rs
ibserver/src/pages/: error.rs  mod.rs  posts.rs  search.rs
