[package]
name = "imageboard_server"
version = "0.1.0"
authors = ["Serxka <serxka@protonmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"

serde = "1.0"
serde_json = "1.0"

dotenv = "0.10"
env_logger = "0.7"

diesel = { version = "1.0", features = ["postgres", "r2d2"] }